plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.14'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.diffplug.spotless'
}

group = 'io.github.trialiya.kb'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    mavenLocal()
}

ext {
    set('springAiVersion', '1.1.6')
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.apache.httpcomponents.client5:httpclient5'

    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.postgresql:postgresql'
    implementation 'com.h2database:h2'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    implementation 'org.springframework.ai:spring-ai-starter-model-openai'
    implementation 'org.springframework.ai:spring-ai-starter-model-chat-memory-repository-jdbc'

    implementation 'com.google.guava:guava:33.6.0-jre'

    implementation 'io.github.bonede:tree-sitter:0.26.6'
    implementation 'io.github.bonede:tree-sitter-java:0.23.5'
    implementation 'io.github.bonede:tree-sitter-javascript:0.25.0'
    implementation 'io.github.bonede:tree-sitter-typescript:0.23.2'
    implementation 'io.github.bonede:tree-sitter-python:0.25.0'

    implementation 'org.jspecify:jspecify:1.0.0'
    compileOnly 'org.projectlombok:lombok'

//	developmentOnly 'org.springframework.boot:spring-boot-devtools'

    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
    }
}

spotless {
    java {
        googleJavaFormat('1.28.0').aosp()
        importOrder()
        removeUnusedImports()
        endWithNewline()
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

bootJar {
    dependsOn ':frontend:copyFrontend'
}
